# skill_to_spl

./: .env.example  .gitignore  AGENTS.md  HANDOFF_STRUCTURAL_CLARIFICATION.md  IMPLEMENTATION_SUMMARY.json  README.md  _patch_llm_client.py  cli.py  cli_async.py  implementation_status.json  llm_connection_test.py  main.py  pyproject.toml  refactor_status.json  test.py  test_property_json_serialization_roundtrip.py  test_script_analysis.py
PLAN/: unified_api_extraction_plan.md
design_docs/: 01_preprocessing.md  02_step1_structure_extraction.md  03_step3_interface_inference.md  04_step4_spl_emission.md  Skill-to-CNL-P Agent Pipeline - New.drawio  Skill2SPL-V2.drawio  phase_d_refactor_plan.md  skill_to_cnlp_design (1).md  skill_to_cnlp_design_latest.md  skill_to_cnlp_design_v2.md  spl_grammar.txt
docs/: cleanup_plan.md  cleanup_plan_detailed.md  phase1_implementation_plan.md  phase2_completion_report.md  phase2_implementation_plan.md  phase3_detailed_plan.md
examples/: step4_substeps_example.py
models/: README.md  __init__.py  base.py  core.py  data_models.py  data_models.py.backup  deprecated.py  pipeline_result.py  step3_types.py
pipeline/: AGENTS.md  __init__.py  exceptions.py  llm_client.py  orchestrator.py  orchestrator_async.py  spl_formatter.py  step2b_classifier.py  steps.py.bak
pre_processing/: p1_reference_graph.py  p25_api_analyzer.py  p2_file_roles.py  p3_assembler.py  script_analyzer.py  unified_api_extractor.py
prompts/: p2_system.py  step0_system.py  step1_5_system.py  step1_system.py  step2a_system.py  step3_io_system.py  step3_system.py  (+6 more)
(+186 files in other folders)
